cleanup in classfile